Added Fabric support